--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -29,6 +29,12 @@
         data-accordion="false"
       >
         <li class="nav-item">
+          <a href="/initial-meeting" class="nav-link">
+            <i class="nav-icon fas fa-id-card text-success"></i>
+            <p>Initial Meeting</p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="/lead" class="nav-link">
             <i class="nav-icon fas fa-id-card text-success"></i>
             <p>Lead</p>
