--- a/templates/views/reports.html
+++ b/templates/views/reports.html
@@ -3,10 +3,27 @@
 <!-- content -->
 {{block 'content'}}
 <div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
-    <h1>Reports</h1>
+  <div class="col-sm-3">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-filter"></i> Filter
+        </h3>
+      </div>
+      <div class="card-body">
+        <!-- filter report type -->
+        {{include './components/search_select.html', { name: 'report_type'} }}
+        <!-- filter from date -->
+        {{include './components/input_datetime.html', { name: 'from_date'} }}
+        <!-- filter to date -->
+        {{include './components/input_datetime.html', { name: 'to_date'} }}
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-success btn-sm btn-block">Download</button>
+      </div>
+    </div>
   </div>
+  <div class="col-sm-9"></div>
 </div>
 {{/block}}
 <!-- javascript -->
