--- a/templates/views/initial_meeting_edit.html
+++ b/templates/views/initial_meeting_edit.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-4">
     <div class="card ">
-      <form id="lead_form" action="/lead/update" method="post">
+      <form id="lead_form" action="/initial-meeting/update" method="post">
         <div class="card-header">
           <h3 class="card-title font-weight-bold">
             <i class="far fa-address-card"></i>  Lead Information {{@lead.status | leadStatusBadge}}
@@ -29,14 +29,14 @@
           <input type="hidden" name="status" id='status' value="{{lead.status}}"/>
           <input type="hidden" name="hierarchy" id='hierarchy' value="{{lead.hierarchy}}"/>
         </div>
-        <!--input type="hidden" name="date" id='hidden_date'/>
-        <input type="hidden" name="time" id='hidden_time'/-->
+        <!--input type="hidden" name="date" id='hidden_date'/-->
+        <!--input type="hidden" name="time" id='hidden_time'/-->
         <input type="hidden" name="datetime" id='hidden_datetime'/>
         <input type="hidden" name="address" id='hidden_address'/>
         <input type="hidden" name="product" id='hidden_product'/>
         <input type="hidden" name="program" id='hidden_program'/>
 
-        <input type="hidden" name="status_log" id='hidden_status_log'/>
+        <input type="hidden" name="status_log" id='hidden_status_log'/> 
         <input type="hidden" name="note" id='hidden_note'/>
 
         <input type="hidden" name="meeting_id" id='hidden_meeting_id'/>
@@ -70,8 +70,8 @@
           <div class="col-md-6">
             {{include './components/input_datetimev2.html', { name: 'datetime', value: lead} }}
             {{include './components/input_text.html', {type: 'text', name: 'address', value: lead} }}
-            {{include './components/select.html', { name: 'product', value: lead, options: PRODUCTS} }}
-            {{include './components/select.html', { name: 'program', value: lead, options: PROGRAMS} }}
+            {{include './components/input_text.html', {type: 'text', name: 'product', value: lead} }}
+            {{include './components/input_text.html', {type: 'text', name: 'program', value: lead} }}
             
           </div>
           <div class="col-md-6">
@@ -97,6 +97,9 @@
       </div>
       <div class="card-body">
         <div class="timeline">
+          <!--div class="time-label">
+            <span class="bg-info">Pending: 1</span>
+          </div--> 
           {{each meeting}}
             {{include './components/meeting_timeline.html', {meeting: $value, outcome: OUTCOME, hierarchy: lead.hierarchy} }}
           {{/each}}
@@ -142,7 +145,7 @@
     for (let i = 0; i < status_fields.length; i++) {
       document.getElementById(`hidden_${status_fields[i]}`).value = document.getElementById(status_fields[i]).value;
     }
-    document.getElementById("lead_form").action = `/lead/${action}`;
+    document.getElementById("lead_form").action = `/initial-meeting/${action}`;
     document.getElementById("lead_form").submit()
   }
 
@@ -152,10 +155,10 @@
     for (let i = 0; i < status_fields.length; i++) {
       $(`#hidden_${outcome_fields[i]}`).val( $(`#${meeting_id} #${outcome_fields[i]}`).val())
     }
-
+    
     $(`#hidden_is_first_meeting`).val($(`#${meeting_id} #is_first_meeting`).is(':checked'))
     $(`#hidden_is_second_meeting`).val($(`#${meeting_id} #is_second_meeting`).is(':checked'))
-    document.getElementById("lead_form").action = `/lead/meeting-update`;
+    document.getElementById("lead_form").action = `/initial-meeting/meeting-update`;
     document.getElementById("lead_form").submit()
   }
   
