--- a/templates/views/lead.html
+++ b/templates/views/lead.html
@@ -34,6 +34,7 @@
                 <th><i class="fas fa-briefcase"></i> Job Title</th>
                 <th><i class="far fa-building"></i> Company</th>
                 <th><i class="fas fa-mobile-alt"></i> Mobile</th>
+                <th><i class="fas fa-stream"></i> Hierarchy</th>
                 <th><i class="far fa-id-badge"></i> Status</th>
               </tr>
             </thead>
@@ -61,6 +62,7 @@
                 <td><i class="fas fa-briefcase"></i> {{$value.job_title}}</td>
                 <td><i class="far fa-building"></i> {{$value.company}}</td>
                 <td><i class="fas fa-mobile-alt"></i> {{$value.mobile}}</td>
+                <td>{{@$value.hierarchy | leadHierarchyBadge}}</td>
                 <td>{{@$value.status | leadStatusBadge}}</td>
 
               </tr>
