--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -47,6 +47,13 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
+<link 
+  rel="stylesheet" 
+  href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" 
+  integrity="sha512-f0tzWhCwVFS3WeYaofoLWkTP62ObhewQ1EZn65oSYDZUg1+CyywGKkWzm8BxaJj5HGKI72PnMH9jYyIFz+GH7g==" 
+  crossorigin="anonymous" 
+  referrerpolicy="no-referrer" 
+/>
 <style>
   span.text-sm {
     font-size: 0.715rem !important;
