--- a/templates/views/partials/scripts.html
+++ b/templates/views/partials/scripts.html
@@ -25,3 +25,9 @@
   referrerpolicy="no-referrer"
 ></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script 
+  src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" 
+  integrity="sha512-AIOTidJAcHBH2G/oZv9viEGXRqDNmfdPVPYOYKGy3fti0xIplnlgMHUGfuNRzC6FkzIo0iIxgFnr9RikFxK+sw==" 
+  crossorigin="anonymous" 
+  referrerpolicy="no-referrer"
+></script>
