--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -70,4 +70,12 @@
     margin: 0px;
     margin-bottom: 5px;
   }
+
+  .fc-timegrid-slot {
+    height: 2.6em !important;
+    border-bottom: 0 !important;
+  };
+  .style-calendar-tip {
+    font-size:1px !important;
+  }
 </style>
