--- a/templates/views/components/meeting_timeline.html
+++ b/templates/views/components/meeting_timeline.html
@@ -31,36 +31,38 @@
       </div>
       <div class="col-md-6" id='{{meeting._id.toString()}}'>
           <input type="hidden" class="form-control" id="meeting_id" value="{{meeting._id.toString()}}"/>
-          {{include './select.html', { name: 'outcome', options: outcome} }}
+          {{include './select_meeting_outcome.html', { name: 'outcome', options: outcome, meeting_id: meeting._id.toString() } }}
           {{include './textarea.html', { name: 'outcome_note'} }}
-          {{if hierarchy == 0 }} <!--HIERARCHY.NEW-->
-            <div class="form-group">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id='is_first_meeting' name='is_first_meeting' />
-                <label class="form-check-label">First Meeting</label>
+          <div id='hierarchy_container' style='display: none'>
+            {{if hierarchy == 0 }} <!--HIERARCHY.NEW-->
+              <div class="form-group">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id='is_first_meeting' name='is_first_meeting' />
+                  <label class="form-check-label">First Meeting</label>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id='is_second_meeting' name='is_second_meeting' disabled />
-                <label class="form-check-label">Second Meeting</label>
+              <div class="form-group">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id='is_second_meeting' name='is_second_meeting' disabled />
+                  <label class="form-check-label">Second Meeting</label>
+                </div>
               </div>
-            </div>
-          {{/if}}
-          {{if hierarchy == 1 }} <!--HIERARCHY.FIRST_MEETING-->
-            <div class="form-group">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id='is_first_meeting' name='is_first_meeting' disabled checked />
-                <label class="form-check-label">First Meeting</label>
+            {{/if}}
+            {{if hierarchy == 1 }} <!--HIERARCHY.FIRST_MEETING-->
+              <div class="form-group">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id='is_first_meeting' name='is_first_meeting' disabled checked />
+                  <label class="form-check-label">First Meeting</label>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id='is_second_meeting' name='is_second_meeting' />
-                <label class="form-check-label">Second Meeting</label>
+              <div class="form-group">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id='is_second_meeting' name='is_second_meeting' />
+                  <label class="form-check-label">Second Meeting</label>
+                </div>
               </div>
-            </div>
-          {{/if}}
+            {{/if}}
+          </div>
           <div class="form-group">
             <button onclick="submitUpdateMeeting(`{{meeting._id.toString()}}`)" class="btn bg-teal btn-block font-weight-bold">
               <i class="fas fa-save"></i> Update Meeting
