--- a/templates/views/initial_meeting.html
+++ b/templates/views/initial_meeting.html
@@ -13,10 +13,15 @@
       <div class="card-body">
         <!-- search name -->
         {{include './components/search_box.html', { name: 'name'} }}
+        <!-- search email -->
+        {{include './components/search_box.html', { name: 'email'} }}
+        <!-- search contact -->
+        {{include './components/search_box.html', { name: 'contact'} }}
         <!-- search job title -->
         {{include './components/search_box.html', { name: 'job_title'} }}
         <!-- search company -->
         {{include './components/search_box.html', { name: 'company'} }}
+
       </div>
     </div>
   </div>
@@ -92,6 +97,12 @@
   document.getElementById('name').value = decodeHTML(
     '{{search.name | escapeBackslash}}'
   );
+  document.getElementById('email').value = decodeHTML(
+    '{{search.email | escapeBackslash}}'
+  );
+  document.getElementById('contact').value = decodeHTML(
+    '{{search.contact | escapeBackslash}}'
+  );
   document.getElementById('job_title').value = decodeHTML(
     '{{search.job_title | escapeBackslash}}'
   );
@@ -102,10 +113,14 @@
   function search(page = 1) {
     let url = window.location.href.split('?')[0];
     let name = $('#name').val();
+    let email = $('#email').val();
+    let contact = $('#contact').val();
     let job_title = $('#job_title').val();
     let company = $('#company').val();
     url += `?page=${page}`;
     if (name) url += `&name=${name}`;
+    if (email) url += `&email=${email}`;
+    if (contact) url += `&contact=${contact}`;
     if (job_title) url += `&job_title=${job_title}`;
     if (company) url += `&company=${company}`;
     window.location.href = url;
