--- a/templates/views/lead_edit.html
+++ b/templates/views/lead_edit.html
@@ -146,7 +146,21 @@
       document.getElementById(`hidden_${status_fields[i]}`).value = document.getElementById(status_fields[i]).value;
     }
     document.getElementById("lead_form").action = `/lead/${action}`;
-    document.getElementById("lead_form").submit()
+    
+    Swal.fire({
+      title: 'Do you want to update this Lead?',
+      icon: 'question',
+      showCloseButton: true,
+      showCancelButton: true,
+      confirmButtonText: '<i class="fas fa-save"></i> Update',
+      confirmButtonColor: '#20c997',
+      cancelButtonText: '<i class="fas fa-times"></i> Cancel',
+      cancelButtonColor: '#d81b60',
+    }).then((result) => {
+      if (result.isConfirmed) {
+        document.getElementById("lead_form").submit();
+      }
+    });
   }
 
   var outcome_fields = ['meeting_id', 'outcome', 'outcome_note']
@@ -159,7 +173,21 @@
     $(`#hidden_is_first_meeting`).val($(`#${meeting_id} #is_first_meeting`).is(':checked'))
     $(`#hidden_is_second_meeting`).val($(`#${meeting_id} #is_second_meeting`).is(':checked'))
     document.getElementById("lead_form").action = `/lead/meeting-update`;
-    document.getElementById("lead_form").submit()
+    
+    Swal.fire({
+      title: 'Do you want to update this lead meeting?',
+      icon: 'question',
+      showCloseButton: true,
+      showCancelButton: true,
+      confirmButtonText: '<i class="fas fa-save"></i> Update',
+      confirmButtonColor: '#20c997',
+      cancelButtonText: '<i class="fas fa-times"></i> Cancel',
+      cancelButtonColor: '#d81b60',
+    }).then((result) => {
+      if (result.isConfirmed) {
+        document.getElementById("lead_form").submit();
+      }
+    });
   }
   
 
